After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680752 - Touch cancel events are not processed by Clutter
Touch cancel events are not processed by Clutter
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-07-28 13:48 UTC by Lionel Landwerlin
Modified: 2012-07-29 13:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch v1 (1.14 KB, patch)
2012-07-28 13:50 UTC, Lionel Landwerlin
accepted-commit_now Details | Review

Description Lionel Landwerlin 2012-07-28 13:48:43 UTC
At the moment, the current code does not forward incoming touch cancel events to the actors.
Comment 1 Lionel Landwerlin 2012-07-28 13:50:18 UTC
Created attachment 219780 [details] [review]
Patch v1
Comment 2 Emmanuele Bassi (:ebassi) 2012-07-29 08:00:06 UTC
Review of attachment 219780 [details] [review]:

looks good
Comment 3 Lionel Landwerlin 2012-07-29 13:09:59 UTC
Pushed.